# api-mlflow

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/handler/: handler.py  model_connector.py
app/models/inputs/: text.py
app/routers/: predict.py
app/utils/: log_config.py
docker/api-mlflow/: Dockerfile
