[tool.poetry]
name = "api-mlflow"
version = "0.1.0"
description = "Creating an api for serving mlflow model"
authors = ["Yu-Lin Huang <yulinhuang23@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "api_mlflow"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
boto3 = "^1.34.122"
mlflow = "^2.13.2"
uvicorn = "^0.30.1"
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
